# track-money

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  endpoint.http  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: change-orchestrator.agent.md  commit-assistant.agent.md  ddd-monolith-reviewer.agent.md  unit-test-writer.agent.md
.github/instructions/: orchestration-workflow.instructions.md  python.instructions.md  testing-workflow.instructions.md
.github/skills/docker-setup/: SKILL.md
.github/skills/fastapi-endpoint/: SKILL.md
app/: main.py
app/autentication/: __init__.py  _auth.py  _password.py  _user.py  _user_repository.py  get_email_from_token.py  query_user_by_email.py  router.py  schema.py  user_repository.py
app/autentication/use_cases/: authenticate_user.py  get_user_profile.py  register_user.py
app/authentication/: __init__.py  _auth.py  _user.py  _user_repository.py  query_user_by_email.py  router.py
app/authentication/use_cases/: authenticate_user.py  get_user_profile.py  register_user.py
app/core/: domain_error.py  domain_exception.py
app/infra/: database.py
app/movement/: router.py  schema.py
app/movement/bank/: _bank_account.py  _bank_account_repository.py
app/movement/use_cases/: _ports.py  register_bank_account.py
app/subscription/: __init__.py  query_user_plan.py  router.py  schema.py
app/subscription/plan/: _plan.py  _plan_repository.py
app/subscription/use_cases/: _ports.py  get_user.py  select_plan.py
app/subscription/user/: _user.py  _user_plan.py  (+1 more)
(+4 files in other folders)
